# face_recoginationn

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  README_FACE_RECOGNITION.md  app.py  app_improved.py  app_simple.py  app_with_recognition.py  demo.py  docker-compose.yml  env.example  pyproject.toml  requirements.txt  run.py  setup.py  supabase_migration.sql  supabase_schema.sql
config/: camera_config.py  model_config.py  settings.py
data/: persons.json
docs/: api.md  deployment.md  installation.md  model_training.md
docs/api/: README.md  auth.md
notebooks/: face_detection_exploration.ipynb  model_training.ipynb  performance_analysis.ipynb
scripts/: data_preprocessing.py  download_models.py  setup_environment.py  train_model.py
src/face_scan/: __init__.py  app.py  main.py
src/face_scan/api/middleware/: auth.py  cors.py
src/face_scan/api/routes/: faces.py  health.py  scan.py
src/face_scan/camera/: camera_manager.py  ip_camera.py  webcam.py
src/face_scan/core/: face_detector.py  face_encoder.py  face_recognizer.py  image_processor.py
src/face_scan/database/: connection.py  models.py
src/face_scan/gui/: main_window.py  scan_window.py
src/face_scan/gui/components/: face_display.py  scan_controls.py
src/face_scan/models/: base_model.py  face_detection_model.py  face_recognition_model.py
src/face_scan/monitoring/: __init__.py  alerts.py  dashboard.py  health.py  logger.py  metrics.py
src/face_scan/security/: __init__.py  auth.py  encryption.py  permissions.py  rate_limiter.py  validation.py
src/face_scan/services/: database_service.py  face_scan_service.py  notification_service.py  storage_service.py
src/face_scan/utils/: face_utils.py  file_utils.py  image_utils.py  validators.py  video_utils.py
static/css/: style.css
static/js/: main.js  results.js  scan.js
templates/: index.html  results.html  scan.html
tests/: conftest.py  test_face_detection.py  test_face_recognition.py  test_models.py
